tests/ui/modules/path-no-file-name.stderr
error: `$DIR/.` is a directory
  --> $DIR/path-no-file-name.rs:5:1
   |
LL | mod m;
   | ^^^^^^

error: aborting due to 1 previous error

